# scrabble-game-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  token_generator.py
scrabble_app/: constants.py  logger.py
scrabble_app/game_logic/: cheater_service.py  exceptions.py  models.py  move_parser.py  utils.py  word_finder.py
scrabble_app/images_updater/: constants.py  tiles_generator.py  updater.py
scrabble_app/readme_parser/: parser.py
scrabble_app/tests/: board_test.py  game_test.py  letters_bank_test.py  readme_parser_test.py  spanish_dict_test.py  word_finder_test.py
tests/: e2e_test.py  game_test.py  readme_parser_test.py  word_finder_test.py
tests/results/2022-12-08_02:07:22-test-results/: game_status.json
tests/results/2022-12-08_02:08:26-test-results/: game_status.json
tests/results/2022-12-08_02:09:52-test-results/: game_status.json
tests/results/2022-12-08_02:17:51-test-results/: game_status.json
tests/results/2022-12-08_02:18:14-test-results/: game_status.json
tests/results/2022-12-08_02:22:46-test-results/: game_status.json
tests/results/2022-12-08_02:26:14-test-results/: game_status.json
