[tool.poetry]
name = "scrabble-game-api"
version = "0.1.0"
description = ""
authors = ["radosz99"]
readme = "README.md"
packages = [{include = "scrabble_game_api"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.20.0"
requests = "^2.28.1"
pillow = "^9.3.0"
fastapi = "^0.87.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
